static/style.css
@font-face {
    font-family: 'Concert One';
    src: url('ConcertOne-Regular.ttf');
    font-weight: 400;
    font-style: regular;
  }

body {
    color: oklch(10% 0 0);
    background-color: oklch(98% 0 0);
    font-family: "Concert One";
    font-size: 1em;
}

body::selection {
    background-color: oklch(47% 0.2 263);
}

span.websiteName {
    color: oklch(20% 0.1 263);
}

header,
form,
footer {
    display: grid;
    grid-template-columns: max(50vw, min(800px, 90vw));
    justify-content: center;
}

form {
    font-size: 1.1em;
    row-gap: max(0.5em, 10px);
}

input,
textarea {
    font: inherit;
    color: oklch(0% 0 0);
    background-color: oklch(100% 0 0);
    border: solid oklch(96% 0.2 110);
    border-radius: 10px;
    width: 100%;
    height: clamp(min-content, auto, max-content); 
}

input:focus,
textarea:focus {
    outline-color: oklch(47% 0.2 263);
    background-color: oklch(96% 0.2 110);
}

textarea {
    height: 50vh;
    resize: vertical;
}

a:link,
a:visited {
    color: oklch(47% 0.2 263);
    text-decoration: none;
}

a:focus, 
a:hover {
    text-decoration: underline;
}

footer {
    font-size: 0.85em;
}

